--- a/front/pages/game/mail-send.html
+++ b/front/pages/game/mail-send.html
@@ -106,9 +106,9 @@
         {field: "id", title: "日志id"},
         {field: "mailid", title: "邮件id"},
         {field: "sendtime", title: "发送时间"},
-        {field: "templateid", title: "邮件模板"},
-        {field: "itemid", title: "邮件附件"},
-        {field: "itemnum", title: "附件数量"},
+        {field: "title", title: "标题"},
+        {field: "content", title: "内容"},
+        {field: "items", title: "附件"},
       ]],
       toolbar: true,
       defaultToolbar: ['filter', 'print', 'exports'],
