--- a/front/pages/server/server-add.html
+++ b/front/pages/server/server-add.html
@@ -64,6 +64,13 @@
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">监控脚本</label>
+        <div class="layui-input-block">
+          <input type="text" id="monitor_script" placeholder="监控脚本" class="layui-input">
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <label class="layui-form-label">自定义模板</label>
         <div class="layui-input-block">
           <textarea id="profile_conf_template" class="layui-textarea" rows="13"></textarea>
@@ -166,6 +173,7 @@
           services: services,
           mfw_server: parseInt($('#mfw_server').val()),
           start_script: $('#start_script').val()
+          monitor_script: $('#monitor_script').val()
         }
         okUtils.ajax("/api/server/add", "post", { server: okUtils.jsonToString(req) }, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
