--- a/front/pages/server/server-edit.html
+++ b/front/pages/server/server-edit.html
@@ -64,6 +64,13 @@
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">监控脚本</label>
+        <div class="layui-input-block">
+          <input type="text" id="monitor_script" placeholder="监控脚本" class="layui-input">
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <label class="layui-form-label">自定义模板</label>
         <div class="layui-input-block">
           <textarea id="profile_conf_template" class="layui-textarea" rows="13"></textarea>
@@ -176,6 +183,7 @@
         $('#profile_conf_template').val(data.profile_conf_template);
         $('#mfw_server').val(data.mfw_server);
         $('#start_script').val(data.start_script);
+        $('#monitor_script').val(data.monitor_script);
         form.render();
       }).fail(function (error) {
         console.log(error);
@@ -203,6 +211,7 @@
           services: services,
           mfw_server: parseInt($('#mfw_server').val()),
           start_script: $('#start_script').val()
+          monitor_script: $('#monitor_script').val()
         }
         okUtils.ajax("/api/server/update", "post", { server: okUtils.jsonToString(req) }, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
