--- a/front/pages/server/server-list.html
+++ b/front/pages/server/server-list.html
@@ -77,6 +77,9 @@
                 case 0: return "<font color='#FF5722'>停止</font>";
                 case 1: return "<font color='#5FB878'>运行中</font>";
                 case 2: return "<font color='#FFB800'>启动中</font>";
+                case 3: return "<font color='#FFB800'>停止中</font>";
+                case 4: return "<font color='#FFB800'>更新文件下载中</font>";
+                case 5: return "<font color='#FFB800'>更新文件下载完成</font>";
                 default: return "未知状态: " + d.cur_stat;
               }
             }
