--- a/front/pages/server/server-add.html
+++ b/front/pages/server/server-add.html
@@ -192,7 +192,7 @@
           start_script: $('#start_script').val(),
           monitor_script: $('#monitor_script').val(),
           stop_script: $('#stop_script').val(),
-          prom_port: $('#prom_port').val()
+          prom_port: parseInt($('#prom_port').val())
         }
         okUtils.ajax("/api/server/add", "post", { server: okUtils.jsonToString(req) }, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
