--- a/front/pages/server/publish-detail.html
+++ b/front/pages/server/publish-detail.html
@@ -113,7 +113,7 @@
 
         let vItem = [];
         for (let v of selectNode) {
-          vItem.push({"sApp":editServer.app, "sServer":editServer.server, "sDivision":v.division, "sNodeName": v.node, "sCommand": "patch","mParam" : { "patchid": id }},);
+          vItem.push({"sApp":editServer.app, "sServer":editServer.server, "sDivision":v.division, "sNodeName": v.node, "sCommand": "patch", "mParam" : { "patchid": id }});
          }
 
         let req = {
