--- a/front/pages/server/server-add.html
+++ b/front/pages/server/server-add.html
@@ -151,6 +151,7 @@
 
       let curTable = table.render({
         elem: "#tableId",
+        data: [],
         limit: 30,
         page: true,
         toolbar: "#toolbarTpl",
