--- a/front/pages/game/client-err.html
+++ b/front/pages/game/client-err.html
@@ -100,7 +100,7 @@
         text: {
           none: '暂无相关数据',
         },
-        limit: 5,
+        limit: 10,
         page: true,
         cols: [[
           { type: "checkbox", title: "序号", align: "center" },
@@ -108,19 +108,6 @@
           { field: "client_version", title: "客户端版本", width: 150, align: "center" },
           { field: "err_times", title: "报错次数", width: 120, align: "center" },
           { field: "err_info", title: "报错信息" },
-          {
-            field: "status", title: "状态", width: 120, align: "center", templet: function (d) {
-              let ret = '';
-              switch (d.status) {
-                case 1: ret = '未处理'; break;
-                case 2: ret = '处理中'; break;
-                case 3: ret = '处理完成'; break;
-                default:
-                  ret = '未知状态';
-              }
-              return ret;
-            }
-          },
           { title: "操作", width: 150, align: "center", templet: "#operationTpl", fixed: 'right' }
         ]],
         toolbar: "#toolbarTpl",
@@ -167,20 +154,18 @@
       }
 
       function dispose() {
-        if (iStatus != 1) {
-          okLayer.redCryMsg("已在处理列表", function () {
+        okLayer.confirm("处理后请在客户端报错处理中查看详情", function () {
+          let param = { sClientVersion: clientVersion, sErrInfoMd5: errInfoMd5, sErrInfo: errInfo };
+          okUtils.ajax("/api/game/client_err/dispose", "post", param, false).done(function (response) {
+            okLayer.greenTickMsg(response.data, function () {
+              $('#search').trigger("click");
+            });
+          }).fail(function (error) {
+            console.log(error);
+            return fasle;
           });
-          return false;
-        }
-        let param = { sClientVersion: clientVersion, sErrInfoMd5: errInfoMd5, sErrInfo: errInfo };
-        okUtils.ajax("/api/game/client_err/dispose", "post", param, false).done(function (response) {
-          okLayer.greenTickMsg(response.data, function () {
-            $('#search').trigger("click");
-          });
-        }).fail(function (error) {
-          console.log(error);
-        });
-        return false;
+          delNotCheck(data.id);
+        })  
       }
 
       function del(id) {
@@ -191,6 +176,14 @@
             console.log(error)
           });
         })
+      }
+
+      function delNotCheck(id) {
+          okUtils.ajax("/api/game/client_err/clent_err_del", "post", { idsStr: id }, true).done(function (response) {
+            okUtils.tableSuccessMsg(response.data);
+          }).fail(function (error) {
+            console.log(error)
+          });
       }
 
       function batchDel() {
@@ -217,13 +210,13 @@
         });
         let sStartTime = data.field.startTime;
         let sEndTime = data.field.endTime;
-        okUtils.ajax("/api/game/client_err/clientlist", "get", { page: 1, limit: 9999, startTime: sStartTime, endTime: sEndTime}, false).done(function (response) {
-        clientVerisonSelect.update({
-          data: response.data,
+        okUtils.ajax("/api/game/client_err/clientlist", "get", { page: 1, limit: 9999, startTime: sStartTime, endTime: sEndTime }, false).done(function (response) {
+          clientVerisonSelect.update({
+            data: response.data,
+          });
+        }).fail(function (error) {
+          console.log(error);
         });
-      }).fail(function (error) {
-        console.log(error);
-      });
         return false;
       });
     })
